fix: add paddings to modal success on mobile resolution

--- a/src/components/PopupWithForm/FormSuccess/FormSuccess.css
+++ b/src/components/PopupWithForm/FormSuccess/FormSuccess.css
@@ -1,5 +1,6 @@
 @media screen and (max-width: 767px) {
     .modal__success {
         margin: 0;
+        padding: 20px;
     }   
 }
